got the code style box and cool buttons going on

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-    <p>lukelehane.com</p>
+    <div class="box">
+        <div class="box__header">
+            <p>lukelehane.exe</p>
+            <div class="circles">
+                <button class="circle green"></button>
+                <button class="circle amber"></button>
+                <button class="circle red"></button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
