--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
 </head>
 
 <body>
+    <p class="quote">"If you gaze long enough into the abyss, the abyss will gaze back into you."</p>
     <div class="box">
         <div class="box__header">
-            <p>lukelehane.exe</p>
+            <p>lukelehane.com</p>
             <div class="circles">
-                <button class="circle green"></button>
+                <button class="circle green active"></button>
                 <button class="circle amber"></button>
-                <button class="circle red"></button>
+                <button class="circle red active"></button>
             </div>
         </div>
+        <div class="box__content show">
+            <h1>Hello.</h1>
+            <p>I'm Luke and I make websites. This particular one is the result of an experiment in trying to come up with something quite simple but a bit different after many many failed attempts at designing (ahem) and building my own personal site. For this one, I've skipped all the messing about and just used HTML, CSS and JavaScript. It was a glorious experience. I hope you enjoy it. Stay a while and click about.</p>
+        </div>
     </div>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
