trying to figure this syntax highlighting stuff

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                 <button class="circle red active"></button>
             </div>
         </div>
-        <div class="box__content show">
-            <h1>Hello.</h1>
-            <p>I'm Luke and I make websites. This particular one is the result of an experiment in trying to come up with something quite simple but a bit different after many many failed attempts at designing (ahem) and building my own personal site. For this one, I've skipped all the messing about and just used HTML, CSS and JavaScript. It was a glorious experience. I hope you enjoy it. Stay a while and click about.</p>
+        <div class="box__content show code">
+            <h1>&lt;h1&gt;Hello.&lt;/h1&gt;</h1>
+            <p>&lt;p&gt;I am Luke Lehane.<br>
+            Awesome Front End Web Developer.<br>
+            My imposter syndrome is already flaring up after that last line, but I need a cool word to make colourful.&lt;/p&gt;</p>
         </div>
     </div>
 
